# TCC_AMFA

./: .env  pyproject.toml
frontend/: index.html
frontend/css/: cybersecurity.css  styles.css
frontend/js/: api.js  app.js  binary-rain.js  theme.js
python_backend/: app.py  config.py  email_service.py  models.py  routes.py  run.py  security.py
